--- a/MazeGame.cabal
+++ b/MazeGame.cabal
@@ -29,12 +29,14 @@ library
       Lib
       Runner
       MazeParser
+      Types
   other-modules:
       Paths_MazeGame
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , array
     , containers
     , gloss
     , megaparsec
