--- a/MazeGame.cabal
+++ b/MazeGame.cabal
@@ -68,6 +68,7 @@ test-suite MazeGame-test
   build-depends:
       MazeGame
     , base >=4.7 && <5
+    , array
     , containers
     , hspec
     , megaparsec
