--- a/MazeGame.cabal
+++ b/MazeGame.cabal
@@ -42,11 +42,13 @@ library
     , aeson
     , array
     , containers
+    , directory
     , gloss
     , megaparsec
     , mtl
     , random
     , text
+    , time
   default-language: Haskell2010
 
 executable maze-game
