--- a/MazeGame.cabal
+++ b/MazeGame.cabal
@@ -31,6 +31,7 @@ library
       MazeParser
       MazeUtils
       JSONInstances
+      OptionsParser
       Types
       WorldParser
   other-modules:
@@ -46,6 +47,7 @@ library
     , gloss
     , megaparsec
     , mtl
+    , optparse-applicative
     , random
     , text
     , time
