--- a/MazeGame.cabal
+++ b/MazeGame.cabal
@@ -96,3 +96,19 @@ test-suite MazeGame-test
     , megaparsec
     , text
   default-language: Haskell2010
+
+benchmark MazeGame-benchmark
+  type: exitcode-stdio-1.0
+  main-is: GameBenchmark.hs
+  other-modules:
+      Paths_MazeGame
+  hs-source-dirs:
+      benchmark
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      MazeGame
+    , base >=4.7 && <5
+    , criterion
+    , directory
+    , random
+  default-language: Haskell2010
